# std-faster-whisper

./: .gitignore  LICENSE-THIRD-PARTY.md  README.md  VERIFICATION.md  pyproject.toml
docs/: STANDARD_ASR_FINDINGS.md
scripts/: verify_inference.py
src/std_faster_whisper/: __init__.py  _config.py  _convert.py  _metadata.py  _streaming.py  engine.py  entrypoint.py
tests/: conftest.py  test_batch.py  test_entrypoints.py  test_helpers.py  test_streaming.py  test_streaming_edge.py
